JS Primera parte

--- a/M3U1/TransportesX/novedades.html
+++ b/M3U1/TransportesX/novedades.html
@@ -25,34 +25,35 @@
     <nav>
         <div class="holder">
             <ul>
-                <li><a class="activo" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
-                <li><a href="novedades.html">Novedades</a></li>
+                <li><a class="activo" href="novedades.html">Novedades</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
 
     <main class="holder">
-        <div>
-            <img src="img/home/img01.jpg" alt="avion">
-        </div>
-        <div class="columnas">
-            <section class="bienvenidos">
-                <h2>Bienvenidos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eligendi ullam repellat, quis quisquam
-                    porro enim molestiae accusantium quo eaque explicabo dicta nesciunt saepe neque vitae, repellendus
-                    impedit dolores illo.</p>
-            </section>
-            <section class="testimonios">
-                <h2>Testimonios</h2>
-                <div class="testimonio">
-                    <span class="cita">Simplemente Excelente</span>
-                    <span class="autor">Juan Gomez - zapatos.com</span>
-                </div>
-            </section>
+        <h2>Novedades</h2>
+
+        <div class="novedades">
+            <h3>Titulo</h3>
+            <h4>Subtitulo</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo impedit provident dolorum eius ullam,
+                praesentium eaque et. Accusantium voluptate dolores quaerat totam, odio, numquam facilis in fugit
+                veritatis qui impedit!</p>
+            <h3>Titulo</h3>
+            <h4>Subtitulo</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo impedit provident dolorum eius ullam,
+                praesentium eaque et. Accusantium voluptate dolores quaerat totam, odio, numquam facilis in fugit
+                veritatis qui impedit!</p>
+            <h3>Titulo</h3>
+            <h4>Subtitulo</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo impedit provident dolorum eius ullam,
+                praesentium eaque et. Accusantium voluptate dolores quaerat totam, odio, numquam facilis in fugit
+                veritatis qui impedit!</p>
         </div>
 
     </main>
@@ -61,7 +62,6 @@
         <p>Diseñado por Martin Espinola - &copy;2022</p>
 
     </footer>
-
 </body>
 
 </html>
