--- a/M3U1/TransportesX/Nosotros.html
+++ b/M3U1/TransportesX/Nosotros.html
@@ -27,10 +27,10 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a class="activo" href="nosotros.html">Nosotros</a></li>
-                <li><a href="Servicios.html">Servicios</a></li>
-                <li><a href="Galeria.html">Galeria</a></li>
-                <li><a href="Novedades.html">Novedades</a></li>
-                <li><a href="Contacto.html">Contacto</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="novedades.html">Novedades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -91,6 +91,10 @@
 
     </main>
 
+    <footer>
+        <p>Diseñado por Martin Espinola - &copy;2022</p>
+
+    </footer>
 </body>
 
 </html>
