--- a/M3U1/TransportesX/galeria.html
+++ b/M3U1/TransportesX/galeria.html
@@ -25,10 +25,10 @@
     <nav>
         <div class="holder">
             <ul>
-                <li><a class="activo" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
+                <li><a class="activo" href="galeria.html">Galeria</a></li>
                 <li><a href="novedades.html">Novedades</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
@@ -36,32 +36,23 @@
     </nav>
 
     <main class="holder">
-        <div>
-            <img src="img/home/img01.jpg" alt="avion">
-        </div>
-        <div class="columnas">
-            <section class="bienvenidos">
-                <h2>Bienvenidos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eligendi ullam repellat, quis quisquam
-                    porro enim molestiae accusantium quo eaque explicabo dicta nesciunt saepe neque vitae, repellendus
-                    impedit dolores illo.</p>
-            </section>
-            <section class="testimonios">
-                <h2>Testimonios</h2>
-                <div class="testimonio">
-                    <span class="cita">Simplemente Excelente</span>
-                    <span class="autor">Juan Gomez - zapatos.com</span>
-                </div>
-            </section>
-        </div>
 
+        <div class="galeria">
+            <img src="img/galeria/img01.jpg" alt="">
+            <img src="img/galeria/img02.jpg" alt="">
+            <img src="img/galeria/img03.jpg" alt="">
+            <img src="img/galeria/img04.jpg" alt="">
+            <img src="img/galeria/img05.jpg" alt="">
+            <img src="img/galeria/img06.jpg" alt="">
+            <img src="img/galeria/img07.jpg" alt="">
+        </div>
+        
     </main>
 
     <footer>
         <p>Diseñado por Martin Espinola - &copy;2022</p>
 
     </footer>
-
 </body>
 
 </html>
