--- a/M3U3/JS Parte 1-Ejercicio1.html
+++ b/M3U3/JS Parte 1-Ejercicio1.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         var metros;
         // var transporte ="";
 
-        metros=prompt("ingrese metros")
+        metros = prompt("ingrese metros")
 
-        if (metros>0 && metros<1000){
+        if (metros > 0 && metros <= 1000) {
             document.write("el transporte apropiado es pie")
-        } else if(metros>1000 && metros<10000){
+        } else if (metros>= 1001 && metros <= 10000) {
             document.write("el transporte apropiado es bicicleta")
             // transporte ="bicicleta"
-        } else if(metros>10000 && metros<30000){
+        } else if (metros >= 10001 && metros <= 30000) {
             document.write("el transporte apropiado es colectivo")
             // transporte ="colectivo"
-        } else if(metros>30000 && metros<100000){
+        } else if (metros >= 30001 && metros <= 100000) {
             document.write("el transporte apropiado es auto")
             // transporte="auto"
-        } else if(metros>100000){
+        } else if (metros >= 100001) {
             document.write("el transporte apropiado es avion")
             // transporte="avion"
         }
@@ -32,4 +34,5 @@
 
     </script>
 </body>
+
 </html>
